--- a/client/src/components/StockSelector/StockSelector.module.css
+++ b/client/src/components/StockSelector/StockSelector.module.css
@@ -9,23 +9,21 @@
   padding: 0.5em;
 }
 .selectorList {
-  margin: 1em;
-  width: auto;
-  border: 1px solid lightgray;
-  font-size: 1em;
-  list-style: none;
-  margin: 0;
   padding: 0;
-  height: 16em;
-  overflow: auto;
+  margin: 0;
+  border: 1px solid lightgray;
+  list-style: none;
+  max-height: 12em;
+  overflow-y: scroll;
 }
 .selectorListItem {
   padding: 1em;
+  margin: 0;
   cursor: pointer;
   background-color: #fefefe;
   font-weight: 600;
 }
-.selectorListItem:nth-of-type(odd) {
+.selectorListItem:nth-of-type(even) {
   background-color: #efefef;
 }
 .selectorListItem:hover {
