--- a/client/src/components/StockSelector/StockSelector.module.css
+++ b/client/src/components/StockSelector/StockSelector.module.css
@@ -1,6 +1,7 @@
 .stockSelector {
   margin: 1em;
-  padding: 1em;
+  padding: 0;
+  position: relative;
 }
 .selectorInput {
   font-size: 1.1em;
@@ -15,6 +16,9 @@
   list-style: none;
   max-height: 12em;
   overflow-y: scroll;
+  position: absolute;
+  left: 0;
+  right: 0;
 }
 .selectorListItem {
   padding: 1em;
